# ROS2-Object-Detection-and-Depth-Estimation

./: .gitignore  README.md
yolov5_ros2/: package.xml  setup.py
yolov5_ros2/yolov5_ros2/: yolov5_ros2_node.py  yolov8_optimized.py
